Fixed alignment

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -60,7 +60,7 @@ h2 {
 
       position: relative;
       top: 23.5vh;
-      left: 31vw;
+      left: 28vw;
   }
 
   .pastplaylists:hover {
